@@ -104,7 +104,7 @@ class CategoriesModelCategories extends JModelList
 		$query->select(
 			$this->getState(
 				'list.select',
-				'a.id, a.title, a.alias, a.published, a.access, a.ordering' .
+				'a.id, a.title, a.alias, a.published, a.access' .
 				', a.checked_out, a.checked_out_time, a.created_user_id' .
 				', a.path, a.parent_id, a.level, a.lft, a.rgt'
 			)
