@@ -15,6 +15,7 @@ JINVALID_TOKEN=The most recent request was denied because it contained an invali
 JERROR_NO_ITEMS_SELECTED=No items selected.
 JERROR_CHECKIN_FAILED=Check-in failed with the following error: %s
 JERROR_CHECKIN_USER_MISMATCH=The user checking in does not match the user who checked out the item.
+JERROR_SAVE_FAILED=Save failed with the following error: %s
 
 JCOMMON_EDIT_ITEM=Edit item
 JGRID_HEADING_ID=ID
